(fix) change text-aligne

--- a/portfolio/src/app/main-content/about-me/about-me.component.scss
+++ b/portfolio/src/app/main-content/about-me/about-me.component.scss
@@ -22,9 +22,6 @@ main {
   flex-direction: column;
   max-width: 900px;
   text-align: justify;
-  @media (max-width: 1000px) {
-    text-align: center;
-  }
 }
 
 .description-container {
